<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="items">
        <item>Eletrodomésticos</item>
        <item>Alimentos</item>
        <item>Móveis</item>
        <item>Dinheiro</item>
        <item>Roupas</item>
        <item>Sangue</item>
        <item>Remédios</item>
    </string-array>

    <string name="app_name">DoAção</string>
    <string name="app_id">391629757675073</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_desire">Cadastrar Desejo de Doação</string>
    <string name="add">Adicionar</string>
    <string name="cadastrar_desejo_doacao">Cadastrar Desejo de Doação</string>
    <string name="email">Email</string>
    <string name="phone">Telefone</string>
    <string name="location">Localização</string>
    <string name="submit">Cadastrar</string>
    <string name="submitted_with_success">Cadastrado com Sucesso!</string>
    <string name="error">Erro. Tente Novamente!</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">search</string>
    <string name="searchHere">Pesquise aqui</string>
    <string name="title_activity_institution_register">Dados da Instituição</string>
    <string name="name">Nome</string>
    <string name="cnpj">CNPJ</string>
    <string name="password">Senha</string>
    <string name="passwordConfirmation">Confirmação</string>
    <string name="passwordConfirmationlabel">Confirmação de Senha</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="street">Rua</string>
    <string name="number">Numero</string>
    <string name="apartment">Complemento</string>
    <string name="searchDesires">Procurar Doadores</string>
    <string name="title_activity_desire_search_result">Resultados</string>
    <string name="desireSearch">Pesquisa de Desejos de Doação</string>
    <string name="title_activity_desire_details">Detalhes do Desejo</string>
    <string name="searchForInstitutions">Procure por Instituições</string>
    <string name="title_activity_institution_search_result">Resultados</string>
    <string name="selectItems">Selecione os Itens</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Telefone:</string>
    <string name="approximate_location_label">Localização Aproximada:</string>
    <string name="wants_to_donate_label">Deseja Doar:</string>
    <string name="password_doesnt_match">Senha não está de acordo com a conferência, favor digitar novamente.</string>
    <string name="no_items">Por favor selecione pelo menos um item.</string>
    <string name="invalid_email">Email inválido. Favor digitar novamente.</string>
    <string name="fill_to_update">Preencha se deseja atualizar</string>
    <string name="cant_save_user">Não foi possível alterar os dados de email e senha, tente novamente mais tarde.</string>
    <string name="logout">Logout</string>
    <string name="title_activity_institution_login">DoAção</string>
    <string name="im_not_an_institution">Não sou uma instituição!</string>
    <string name="login_or_signup">Entrar ou Cadastrar</string>
    <string name="institution_login">Login de Instituição</string>
    <string name="error_login">Não foi possível completar seu login, tente novamente!</string>
    <string name="user_login">Login de Doador</string>
    <string name="error_face_login">Ocorreu um erro ao logar com o Facebook. Tente novamente!</string>
    <string name="new_institution_conf_pass">Seja bem vindo ao DoAção! Favor digite a confirmação de senha e confirme.</string>
    <string name="session_invalid_error">A sua sessão não é mais válida, favor logar novamente</string>
    <string name="logn_generic_error">Alguma coisa aconteceu errada. Favor tentar novamente.</string>
    <string name="invalid_address">Não foi possível localizar este endereço. Por favor confira o endereço e tente novamente.</string>
    <string name="title_activity_my_desires">Meus desejos de doação</string>

    <string name="hello_world">Hello world!</string>
    <string name="apagar_desejo">Você tem certeza que deseja apagar este desejo de doação?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="desire_delete_sucessfull">Desejo de Doação apagado com sucesso!</string>
    <string name="desire_delete_unsucessfull">Ocorreu um problema ao deletar seu desejo de doação, por favor tente novamente.</string>
    <string name="delete">Deletar</string>
    <string name="myDesires">Meus Desejos de Doação</string>
    <string name="search_error">Ocorreu um erro durante a busca, por favor tente novamente.</string>
    <string name="searching">Buscando</string>
    <string name="loggin_in">Fazendo login</string>
    <string name="email_and_phone_null">Por favor preencha ao menos um dos dois: Email ou Telefone</string>


</resources>
