<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="doacao.doacao2.Activities.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AIL_linear1"
        android:paddingBottom="10dp"
        android:layout_weight="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_login"
            android:id="@+id/AL_user"
            android:textStyle="bold" />

        <!--<com.facebook.widget.LoginButton-->
            <!--android:id="@+id/AL_faceButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="30dp"-->
            <!--/>-->

        <Button
            android:layout_width="242dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/AL_faceButton"
            android:background="@drawable/fblogin"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AIL_linear2"
        android:paddingTop="100dp"
        android:layout_weight="1">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/institution_login"
        android:id="@+id/AL_title"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AL_email"
            android:hint="@string/email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/AL_pass"
            android:hint="@string/password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/AL_pass_conf"
            android:hint="@string/passwordConfirmation"
            android:visibility="invisible"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_signup"
            android:id="@+id/AL_login" />

    </LinearLayout>

</LinearLayout>
